--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
   "scripts": {
     "dev": "nodemon src/index.js"
   },
+  "keywords":[
+    "JavaScript",
+    "Backend"
+  ],
   "author": "Aashish Gulshan",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "prettier": "^3.1.1"
   }
 }
